--- a/src/main/resources/templates/sidUpdate.html
+++ b/src/main/resources/templates/sidUpdate.html
@@ -19,43 +19,6 @@
     <script>
         $(function () {
             calculateSum();
-            //保存，保存修改和添加的数据
-            $.fn.serializeJson = function () {
-                var jsonData1 = {};
-                var serializeArray = this.serializeArray();
-                // 先转换成{"id": ["12","14"], "name": ["aaa","bbb"], "pwd":["pwd1","pwd2"]}这种形式
-                $(serializeArray).each(function () {
-                    if (jsonData1[this.name]) {
-                        if ($.isArray(jsonData1[this.name])) {
-                            jsonData1[this.name].push(this.value);
-                        } else {
-                            jsonData1[this.name] = [jsonData1[this.name], this.value];
-                        }
-                    } else {
-                        jsonData1[this.name] = this.value;
-                    }
-                });
-                // 再转成[{"id": "12", "name": "aaa", "pwd":"pwd1"},{"id": "14", "name": "bb", "pwd":"pwd2"}]的形式
-                var vCount = 0;
-                // 计算json内部的数组最大长度
-                for (var item in jsonData1) {
-                    var tmp = $.isArray(jsonData1[item]) ? jsonData1[item].length : 1;
-                    vCount = (tmp > vCount) ? tmp : vCount;
-                }
-                if (vCount > 1) {
-                    var jsonData2 = new Array();
-                    for (var i = 0; i < vCount; i++) {
-                        var jsonObj = {};
-                        for (var item in jsonData1) {
-                            jsonObj[item] = jsonData1[item][i];
-                        }
-                        jsonData2.push(jsonObj);
-                    }
-                    return JSON.stringify(jsonData2);
-                } else {
-                    return "[" + JSON.stringify(jsonData1) + "]";
-                }
-            };
             //获取表格的修改状态
             $(".itemAmount").change(function () {
                 //动态计算总额
@@ -163,7 +126,7 @@
                 <div class="col-md-4 mb-3">
                     <label for="datepicker6">登记时间</label>
                     <input id="datepicker6" name="createDate"
-                           th:value="${#dates.format(salaryStandard.getCreateDate(),'dd/MM/yyyy')}">
+                           th:value="${#dates.format(salaryStandard.getCreateDate(),'MM/dd/yyyy')}">
                     <script>
                         $('#datepicker6').datepicker({
                             uiLibrary: 'bootstrap4'
